--- a/cif_to_graph.ipynb
+++ b/cif_to_graph.ipynb
@@ -2,7 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "if \"google.colab\" in sys.modules:\n",
+    "    # Mount Google Drive\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    dataset_path = '/content/drive/My Drive/dataset'\n",
+    "\n",
+    "    # Install required packages\n",
+    "    !pip install pymatgen\n",
+    "\n",
+    "else:\n",
+    "    dataset_path = 'dataset'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,20 +41,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the data\n",
-    "# dataset_df = pd.read_csv(\"dataset/combined/high_GaSe.csv\")\n",
-    "\n",
-    "# Load defective structure\n",
-    "# an_index = 10\n",
-    "# defective_file_path = f\"dataset/{dataset_df['dataset_material'][an_index]}/cifs/{dataset_df['_id'][an_index]}.cif\n",
-    "defective_file_path = Path(\"dataset/high_GaSe/cifs/GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054.cif\")\n",
+    "# Get defective structure\n",
+    "defective_file_path = Path(f\"{dataset_path}/high_GaSe/cifs/GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054.cif\")\n",
     "defective_structure = Structure.from_file(defective_file_path)\n",
     "\n",
     "# Get reference structure\n",
-    "# ref_file_path = f\"dataset/{dataset_df['dataset_material'][an_index]}/{dataset_df['base'][an_index]}.cif\"\n",
-    "ref_file_path = Path(\"dataset/high_GaSe/GaSe.cif\")\n",
+    "ref_file_path = Path(f\"{dataset_path}/high_GaSe/GaSe.cif\")\n",
     "ref_unit_cell = Structure.from_file(ref_file_path)\n",
-    "reference_structure = ref_unit_cell.make_supercell([6,6,1])"
+    "reference_structure = ref_unit_cell.make_supercell([6,6,1])\n",
+    "\n"
    ]
   },
   {
@@ -195,7 +211,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now represent th following as a ml friendly data:\n",
     "`nodes` = node features (matrix, one row per node/atom)\n",
     "\n",
     "`edges` = connectivity (which atom/node connects to which node/atom)\n",
