--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "1c20f759",
       "metadata": {},
       "outputs": [],
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "a10ddae3",
       "metadata": {
         "id": "a10ddae3"
@@ -51,152 +51,105 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 5,
-      "id": "6d47c380",
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>_id</th>\n",
-              "      <th>descriptor_id</th>\n",
-              "      <th>energy</th>\n",
-              "      <th>fermi_level</th>\n",
-              "      <th>homo_lumo_gap</th>\n",
-              "      <th>lumo</th>\n",
-              "      <th>homo</th>\n",
-              "      <th>E_1</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>MoS2_Mo63Se2S125_1de54178-46e9-4e0c-a922-6e4c9...</td>\n",
-              "      <td>c2e35d6d-0314-4d37-9385-16a73a4b5b57</td>\n",
-              "      <td>-1371.421478</td>\n",
-              "      <td>-1.658518</td>\n",
-              "      <td>0.3771</td>\n",
-              "      <td>-1.0636</td>\n",
-              "      <td>-1.4407</td>\n",
-              "      <td>-63.1033</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>MoS2_Mo63W1Se2S125_b8bd7ef6-1d0f-43b9-a34c-afb...</td>\n",
-              "      <td>f537f6af-ab01-4c23-8cdb-ba719fb19571</td>\n",
-              "      <td>-1391.335165</td>\n",
-              "      <td>-1.420464</td>\n",
-              "      <td>1.1336</td>\n",
-              "      <td>-0.8537</td>\n",
-              "      <td>-1.9873</td>\n",
-              "      <td>-62.9331</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>MoS2_Mo63W1Se1S125_42a338e1-df26-431d-9f5a-7c9...</td>\n",
-              "      <td>4821cae7-32c3-4f2e-a821-942d6aef19e6</td>\n",
-              "      <td>-1385.453746</td>\n",
-              "      <td>-1.530740</td>\n",
-              "      <td>1.0928</td>\n",
-              "      <td>-0.9063</td>\n",
-              "      <td>-1.9991</td>\n",
-              "      <td>-62.9609</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>MoS2_Mo63W1Se2S125_a947f260-838e-4154-b08c-477...</td>\n",
-              "      <td>f537f6af-ab01-4c23-8cdb-ba719fb19571</td>\n",
-              "      <td>-1391.358443</td>\n",
-              "      <td>-1.328388</td>\n",
-              "      <td>1.1440</td>\n",
-              "      <td>-0.8570</td>\n",
-              "      <td>-2.0010</td>\n",
-              "      <td>-62.9335</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>MoS2_Mo63Se2S125_ae2c4329-dd70-4174-bc11-a26ba...</td>\n",
-              "      <td>c2e35d6d-0314-4d37-9385-16a73a4b5b57</td>\n",
-              "      <td>-1371.905267</td>\n",
-              "      <td>-1.679023</td>\n",
-              "      <td>0.1618</td>\n",
-              "      <td>-1.3186</td>\n",
-              "      <td>-1.4804</td>\n",
-              "      <td>-63.1352</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                                                 _id  \\\n",
-              "0  MoS2_Mo63Se2S125_1de54178-46e9-4e0c-a922-6e4c9...   \n",
-              "1  MoS2_Mo63W1Se2S125_b8bd7ef6-1d0f-43b9-a34c-afb...   \n",
-              "2  MoS2_Mo63W1Se1S125_42a338e1-df26-431d-9f5a-7c9...   \n",
-              "3  MoS2_Mo63W1Se2S125_a947f260-838e-4154-b08c-477...   \n",
-              "4  MoS2_Mo63Se2S125_ae2c4329-dd70-4174-bc11-a26ba...   \n",
-              "\n",
-              "                          descriptor_id       energy  fermi_level  \\\n",
-              "0  c2e35d6d-0314-4d37-9385-16a73a4b5b57 -1371.421478    -1.658518   \n",
-              "1  f537f6af-ab01-4c23-8cdb-ba719fb19571 -1391.335165    -1.420464   \n",
-              "2  4821cae7-32c3-4f2e-a821-942d6aef19e6 -1385.453746    -1.530740   \n",
-              "3  f537f6af-ab01-4c23-8cdb-ba719fb19571 -1391.358443    -1.328388   \n",
-              "4  c2e35d6d-0314-4d37-9385-16a73a4b5b57 -1371.905267    -1.679023   \n",
-              "\n",
-              "   homo_lumo_gap    lumo    homo      E_1  \n",
-              "0         0.3771 -1.0636 -1.4407 -63.1033  \n",
-              "1         1.1336 -0.8537 -1.9873 -62.9331  \n",
-              "2         1.0928 -0.9063 -1.9991 -62.9609  \n",
-              "3         1.1440 -0.8570 -2.0010 -62.9335  \n",
-              "4         0.1618 -1.3186 -1.4804 -63.1352  "
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# Read file\n",
-        "sample_df = pd.read_csv(f\"{dataset_path}/high_MoS2/defects.csv\")\n",
-        "sample_df.head()"
-      ]
-    },
-    {
       "cell_type": "markdown",
-      "id": "771044f5",
+      "id": "7aaaa3c2",
       "metadata": {},
       "source": [
-        "## Get combined file"
+        "## When  dealing with high dataset only"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "c9d40bfe",
+      "id": "c89c9596",
       "metadata": {},
       "outputs": [],
       "source": [
-        "# To do this you need to handle the dataset size issue...\n"
+        "high_dataset = [\"high_BN\", \"high_GaSe\", \"high_InSe\", \"high_MoS2\", \"high_P\", \"high_WSe2\"]\n",
+        "to_merge = [pd.read_csv(f\"{dataset_path}/combined/{high_data}.csv\") for high_data in high_dataset]\n",
+        "\n",
+        "high_df  = pd.concat(to_merge, ignore_index=True)\n",
+        "\n",
+        "high_copy = high_df.copy()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d1708d37",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "high_copy = high_copy.drop([\"_id\", \"base\", \"cell\", \"dataset_material\", \"fermi_level\", \"total_mag\"], axis =1)\n",
+        "high_copy = high_copy.corr()\n",
+        "high_copy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "b2a1865b",
+      "metadata": {},
+      "source": [
+        "## When dealing with low dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b7e760af",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "low_dataset = [\"low_MoS2\", \"low_WSe2\"]\n",
+        "to_merge = [pd.read_csv(f\"{dataset_path}/combined/{low_data}.csv\") for low_data in low_dataset]\n",
+        "\n",
+        "low_df  = pd.concat(to_merge, ignore_index=True)\n",
+        "\n",
+        "low_copy = low_df.copy()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9bfc90c1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "low_copy = low_copy.drop([\"_id\", \"base\", \"cell\", \"dataset_material\", \"fermi_level\", \"total_mag\"], axis =1)\n",
+        "low_copy = low_copy.corr()\n",
+        "low_copy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "fc047800",
+      "metadata": {},
+      "source": [
+        "## When dealing with both low and high dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6d47c380",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Read file\n",
+        "sample_df = pd.read_csv(f\"{dataset_path}/combined/combined.csv\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9c2cd17d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sample_copy = sample_df.copy()\n",
+        "sample_copy = sample_copy.drop([\"_id\", \"base\", \"cell\", \"dataset_material\", \"fermi_level\", \"total_mag\"], axis =1)\n",
+        "sample_copy = sample_copy.corr()\n",
+        "sample_copy"
       ]
     },
     {
@@ -210,37 +163,57 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "0c9356ba",
-      "metadata": {
-        "id": "0c9356ba"
-      },
+      "id": "3ce9677d",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# The combined csv with all the high and low datasets will be named: combined.csv\n",
-        "defects_combined_path = Path(f'{dataset_path}/combined/combined.csv')\n",
-        "defects_df = pd.read_csv(defects_combined_path)\n"
+        "samplex_df = pd.read_csv(f\"{dataset_path}/combined/high_GaSe.csv\")"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "8513c909",
+      "id": "e8e8c7ca",
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Use functions in cif_to_graog to convert each row into raphs."
+        "import to_graph\n",
+        "\n",
+        "def graphy(row):\n",
+        "    defective_file_path = Path(f\"{dataset_path}/{row['dataset_material']}/cifs/{row['_id']}.cif\")\n",
+        "    defective_structure = Structure.from_file(defective_file_path)\n",
+        "\n",
+        "    ref_file_path = Path(f\"{dataset_path}/{row['dataset_material']}/{row['base']}.cif\")\n",
+        "    ref_unit_cell = Structure.from_file(ref_file_path)\n",
+        "    the_cell = ast.literal_eval(row['cell'])\n",
+        "    reference_structure = ref_unit_cell.make_supercell(the_cell)\n",
+        "\n",
+        "    defects_structure = to_graph.get_defects_structure(defective_structure, reference_structure)\n",
+        "\n",
+        "    the_nodes, the_edges, the_edge_features = to_graph.get_nodes_edges(defects_structure)\n",
+        "\n",
+        "    global_attributes = [\"energy\",\"fermi_level\",\"total_mag\",\"formation_energy\",\n",
+        "                         \"energy_per_atom\",\"E_1\",\"vacancy_sites\",\n",
+        "                         \"substitution_sites\",\"defect_sites\"]\n",
+        "    \n",
+        "    global_features = [row[i] for i in global_attributes]\n",
+        "    \n",
+        "    target_attribute = \"band_gap_value\"\n",
+        "    target_features = [row[target_attribute]]\n",
+        "\n",
+        "    return the_nodes, the_edges, the_edge_features, global_features, target_features\n",
+        "\n",
+        "samplex = samplex_df.apply(lambda row: graphy(row), axis = 1)"
       ]
     },
     {
-      "cell_type": "markdown",
-      "id": "d0504703",
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5e0682e3",
       "metadata": {},
+      "outputs": [],
       "source": [
-        "I think the formula that the model should get is, if you have material x missing(vacancy defect) in the lattice or replaced by material y(the substitutional defect), the energy change in that site has a specific value(formation energy). When this value is combined with other formation energies at different defect sites at distances z, you get a positive or negative change to the band gap of the host materials.\n",
-        "So attributes will be:\n",
-        "1. Defect type(vacncy or substitutional)\n",
-        "2. Atomic number change of the site.(from here you get the formation energy)\n",
-        "3. Get formation energy relation with distance. "
+        "samplex[0]"
       ]
     }
   ],
