--- a/cif_to_graph.ipynb
+++ b/cif_to_graph.ipynb
@@ -37,9 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/pymatgen/io/cif.py:1290: UserWarning: Issues encountered while parsing CIF: 8 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
+      "  warnings.warn(\"Issues encountered while parsing CIF: \" + \"\\n\".join(self.warnings))\n"
+     ]
+    }
+   ],
    "source": [
     "# Get defective structure\n",
     "defective_file_path = Path(f\"{dataset_path}/high_GaSe/cifs/GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054.cif\")\n",
@@ -57,6 +66,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def struct_to_dict(structure):\n",
     "    list_of_sites = structure.sites\n",
@@ -64,9 +80,15 @@
     "    structure_dict = {i: j for i, j in zip(list_of_sites, list_of_frac_coords)}\n",
     "    return structure_dict\n",
     "\n",
+    "def get_index(ref_struct, a_site):\n",
+    "    for index, site in enumerate(ref_struct.sites):\n",
+    "        if np.array_equal(site.coords, a_site.coords):\n",
+    "            return index\n",
+    "\n",
     "\n",
     "def get_defects_structure(defective_struct, reference_struct):\n",
     "    copy_defective_struct = defective_struct.copy()\n",
+    "    mindnn = MinimumDistanceNN()\n",
     "    # struct to dict\n",
     "    defective_dict = struct_to_dict(copy_defective_struct)\n",
     "    reference_dict = struct_to_dict(reference_struct)\n",
@@ -94,7 +116,8 @@
     "                                    \"new_an\": def_site.specie.Z,\n",
     "                                    \"an_change\": def_site.specie.Z - ref_site.specie.Z,\n",
     "                                    \"vacancy_defect\": 0.0,\n",
-    "                                    \"substitution_defect\": 1.0}\n",
+    "                                    \"substitution_defect\": 1.0,\n",
+    "                                    \"bonds_broken\": 0.0}\n",
     "                    defects_properties[def_site] = add_property\n",
     "\n",
     "        if not matching: # Vacancy case\n",
@@ -114,7 +137,8 @@
     "                          \"new_an\": 0,\n",
     "                          \"an_change\": 0 - ref_site.specie.Z,\n",
     "                          \"vacancy_defect\": 1.0,\n",
-    "                          \"substitution_defect\": 0.0}\n",
+    "                          \"substitution_defect\": 0.0,\n",
+    "                          \"bonds_broken\": mindnn.get_cn(reference_struct, get_index(reference_struct, ref_site))}\n",
     "            defects_properties[vacant_site] = add_property\n",
     "\n",
     "    # create a defects structure\n",
@@ -129,8 +153,8 @@
     "\n",
     "    return defects_struct\n",
     "\n",
-    "defects_structure = get_defects_structure(defective_structure, reference_structure)\n",
-    "print(defects_structure)"
+    "# defects_structure = get_defects_structure(defective_structure, reference_structure)\n",
+    "# print(defects_structure)"
    ]
   },
   {
@@ -139,15 +163,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "the_csv = pd.read_csv(f\"{dataset_path}/combined/high_GaSe.csv\")\n",
+    "for i in range(len(the_csv)):\n",
+    "    defective_file_path = Path(f\"{dataset_path}/{the_csv['dataset_material'][i]}/cifs/{the_csv['_id'][i]}.cif\")\n",
+    "    defective_structure = Structure.from_file(defective_file_path)\n",
+    "\n",
+    "    ref_file_path = Path(f\"{dataset_path}/{the_csv['dataset_material'][i]}/{the_csv['base'][i]}.cif\")\n",
+    "    ref_unit_cell = Structure.from_file(ref_file_path)\n",
+    "    reference_structure = ref_unit_cell.make_supercell(ast.literal_eval(f\"{the_csv['cell'][i]}\"))\n",
+    "\n",
+    "    def_struct = get_defects_structure(defective_structure, reference_structure)\n",
+    "    print(def_struct)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0.0, 34, 16, -18, 0.0, 1.0], [1, 3, 34, 0, -34, 1.0, 0.0], [2, 3, 34, 0, -34, 1.0, 0.0]]\n",
+      "[[0, 1], [0, 2], [1, 0], [1, 2], [2, 0], [2, 1]]\n",
+      "[[np.float64(13.218612878118082)], [np.float64(6.143837688715257)], [np.float64(13.218612878118082)], [np.float64(11.185157478479823)], [np.float64(6.143837688715257)], [np.float64(11.185157478479823)]]\n"
+     ]
+    }
+   ],
+   "source": [
     "def get_nodes_edges(structure):\n",
     "    sites_list = structure.sites\n",
     "\n",
     "    # The nodes: These are the sites features\n",
-    "    mdnn = MinimumDistanceNN()\n",
     "    nodes = []\n",
     "    for i, site in enumerate(sites_list):\n",
-    "        the_cn = mdnn.get_cn(structure, i)\n",
-    "        node_features = [i, the_cn - 1, site.properties[\"original_an\"], site.properties[\"new_an\"],\n",
+    "        node_features = [i, site.properties[\"bonds_broken\"], site.properties[\"original_an\"], site.properties[\"new_an\"],\n",
     "                         site.properties[\"an_change\"], site.properties[\"vacancy_defect\"],\n",
     "                         site.properties[\"substitution_defect\"]]\n",
     "        # Node features syntax\n",
