try to run faster

--- a/cif_to_graph.ipynb
+++ b/cif_to_graph.ipynb
@@ -273,6 +273,161 @@
     "\n",
     "`u` = global features (formation energy, total_mag, etc.)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def struct_to_dict(structure):\n",
+    "    list_of_sites = structure.sites\n",
+    "    list_of_frac_coords = np.round(structure.frac_coords, 3)\n",
+    "    structure_dict = {i: j for i, j in zip(list_of_sites, list_of_frac_coords)}  # ⚠️ Using PeriodicSite as key – inefficient\n",
+    "    return structure_dict\n",
+    "\n",
+    "def get_index(ref_struct, a_site):\n",
+    "    for index, site in enumerate(ref_struct.sites):  # ⚠️ O(n) linear search\n",
+    "        if np.array_equal(site.coords, a_site.coords):  # ⚠️ Exact match on float arrays – slow and unreliable\n",
+    "            return index\n",
+    "\n",
+    "def get_defects_structure(defective_struct, reference_struct):\n",
+    "    copy_defective_struct = defective_struct.copy()  # ⚠️ Deep copy might not be necessary\n",
+    "    mindnn = MinimumDistanceNN()\n",
+    "\n",
+    "    # Convert structures to dicts\n",
+    "    defective_dict = struct_to_dict(copy_defective_struct)\n",
+    "    reference_dict = struct_to_dict(reference_struct)\n",
+    "\n",
+    "    structure_lattice = copy_defective_struct.lattice\n",
+    "    defects_list = []\n",
+    "    defects_properties = {}\n",
+    "\n",
+    "    for ref_site, ref_coords in reference_dict.items():\n",
+    "        matching = False\n",
+    "        for def_site, def_coords in defective_dict.items():  # ⚠️ Nested loop – O(n²) behavior\n",
+    "            if np.array_equal(ref_coords, def_coords):  # ⚠️ Float comparison again\n",
+    "                matching = True\n",
+    "                if ref_site.specie != def_site.specie:\n",
+    "                    defects_list.append(def_site)\n",
+    "                    add_property = {\n",
+    "                        \"original_an\": ref_site.specie.Z,\n",
+    "                        \"new_an\": def_site.specie.Z,\n",
+    "                        \"an_change\": def_site.specie.Z - ref_site.specie.Z,\n",
+    "                        \"vacancy_defect\": 0.0,\n",
+    "                        \"substitution_defect\": 1.0,\n",
+    "                        \"bonds_broken\": 0.0\n",
+    "                    }\n",
+    "                    defects_properties[def_site] = add_property\n",
+    "        if not matching:\n",
+    "            vacant_site = PeriodicSite(\n",
+    "                species=DummySpecie(),\n",
+    "                coords=ref_coords,\n",
+    "                coords_are_cartesian=False,\n",
+    "                lattice=structure_lattice\n",
+    "            )\n",
+    "            defects_list.append(vacant_site)\n",
+    "            add_property = {\n",
+    "                \"original_an\": ref_site.specie.Z,\n",
+    "                \"new_an\": 0,\n",
+    "                \"an_change\": -ref_site.specie.Z,\n",
+    "                \"vacancy_defect\": 1.0,\n",
+    "                \"substitution_defect\": 0.0,\n",
+    "                \"bonds_broken\": mindnn.get_cn(reference_struct, get_index(reference_struct, ref_site))  # ⚠️ Recomputing get_index\n",
+    "            }\n",
+    "            defects_properties[vacant_site] = add_property\n",
+    "\n",
+    "    defects_struct = Structure.from_sites(defects_list)\n",
+    "\n",
+    "    for a_site in defects_struct.sites:\n",
+    "        if a_site in defects_properties.keys():  # ⚠️ Using object as key again\n",
+    "            a_site.properties.update(defects_properties[a_site])\n",
+    "\n",
+    "    return defects_struct\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from pymatgen.core import Structure, PeriodicSite\n",
+    "from pymatgen.analysis.local_env import MinimumDistanceNN\n",
+    "from pymatgen.core.sites import DummySpecie\n",
+    "\n",
+    "def struct_to_dict_fast(structure):\n",
+    "    \"\"\"\n",
+    "    Return a dict mapping rounded fractional coordinates (as tuples) to sites.\n",
+    "    \"\"\"\n",
+    "    rounded_coords = np.round(structure.frac_coords, 3)\n",
+    "    return {tuple(coord): site for coord, site in zip(rounded_coords, structure.sites)}\n",
+    "\n",
+    "def get_coord_index_map(structure):\n",
+    "    \"\"\"\n",
+    "    Precompute a map from rounded fractional coordinates to site indices.\n",
+    "    \"\"\"\n",
+    "    rounded_coords = np.round(structure.frac_coords, 3)\n",
+    "    return {tuple(coord): i for i, coord in enumerate(rounded_coords)}\n",
+    "\n",
+    "def get_defects_structure_fast(defective_struct, reference_struct):\n",
+    "    mindnn = MinimumDistanceNN()\n",
+    "\n",
+    "    # Use optimized dicts with coordinate tuples as keys\n",
+    "    defective_dict = struct_to_dict_fast(defective_struct)\n",
+    "    reference_dict = struct_to_dict_fast(reference_struct)\n",
+    "    ref_coord_index = get_coord_index_map(reference_struct)\n",
+    "\n",
+    "    defects_list = []\n",
+    "    defects_properties = {}\n",
+    "    lattice = defective_struct.lattice\n",
+    "\n",
+    "    # Compare reference structure to defective structure\n",
+    "    for ref_coord, ref_site in reference_dict.items():\n",
+    "        def_site = defective_dict.get(ref_coord)\n",
+    "\n",
+    "        if def_site:  # Matching position found\n",
+    "            if ref_site.specie != def_site.specie:  # Substitution\n",
+    "                defects_list.append(def_site)\n",
+    "                defects_properties[def_site] = {\n",
+    "                    \"original_an\": ref_site.specie.Z,\n",
+    "                    \"new_an\": def_site.specie.Z,\n",
+    "                    \"an_change\": def_site.specie.Z - ref_site.specie.Z,\n",
+    "                    \"vacancy_defect\": 0.0,\n",
+    "                    \"substitution_defect\": 1.0,\n",
+    "                    \"bonds_broken\": 0.0\n",
+    "                }\n",
+    "        else:  # Vacancy\n",
+    "            vacant_site = PeriodicSite(\n",
+    "                species=DummySpecie(),\n",
+    "                coords=ref_coord,\n",
+    "                coords_are_cartesian=False,\n",
+    "                lattice=lattice\n",
+    "            )\n",
+    "            index = ref_coord_index[ref_coord]\n",
+    "            cn = mindnn.get_cn(reference_struct, index)\n",
+    "            defects_list.append(vacant_site)\n",
+    "            defects_properties[vacant_site] = {\n",
+    "                \"original_an\": ref_site.specie.Z,\n",
+    "                \"new_an\": 0,\n",
+    "                \"an_change\": -ref_site.specie.Z,\n",
+    "                \"vacancy_defect\": 1.0,\n",
+    "                \"substitution_defect\": 0.0,\n",
+    "                \"bonds_broken\": cn\n",
+    "            }\n",
+    "\n",
+    "    # Create new structure from defect sites\n",
+    "    defects_struct = Structure.from_sites(defects_list)\n",
+    "\n",
+    "    # Attach computed properties\n",
+    "    for site in defects_struct.sites:\n",
+    "        props = defects_properties.get(site)\n",
+    "        if props:\n",
+    "            site.properties.update(props)\n",
+    "\n",
+    "    return defects_struct\n"
+   ]
   }
  ],
  "metadata": {
