--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -211,9 +211,10 @@
         "    target_features = [row[target_attribute]]\n",
         "\n",
         "    return the_nodes, the_edges, the_edge_features, global_features, target_features\n",
-        "    # return defects_structure\n",
-        "\n",
-        "samplex = samplex_df.apply(lambda row: graphy(row), axis = 1)"
+        "    #the_data = Data(x=the_nodes, edge_index=the_edges, edge_attr=the_edge_features, u=global_features, y=target_features)\n",
+        "    \n",
+        "samplex = samplex_df.apply(lambda row: graphy(row), axis = 1)\n",
+        "# all_graphs = samplex_df.apply(lambda row: graphy(row), axis=1).tolist()"
       ]
     },
     {
@@ -223,7 +224,76 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samplex[0]"
+        "# samplex[0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "53fda68b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# from torch_geometric.data import Data\n",
+        "\n",
+        "# all_graphs = []\n",
+        "\n",
+        "# the_data = Data(x=the_nodes, edge_index=the_edges, edge_attr=the_edge_features, u=global_features, y=target_features)\n",
+        "# all_graphs.append(the_data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "187b248b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import torch \n",
+        "\n",
+        "# Save the data\n",
+        "torch.save(all_graphs, \"all_graphs.pt\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "20912067",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load the data\n",
+        "whole_graph = torch.load(\"all_graphs.pt\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d886b1aa",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Split the data\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "train_graphs, test_graphs = train_test_split(whole_graph, test_size=0.3, stratify=dataset_type, random_state=42)\n",
+        "\n",
+        "val_graphs, test_graphs = train_test_split(test_graphs, test_size=0.5, stratify=dataset_type, random_state=42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5c52229d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create data loaders\n",
+        "from torch_geometric.loader import DataLoader\n",
+        "\n",
+        "train_loader = DataLoader(train_graphs, batch_size=32, shuffle=True)\n",
+        "val_loader = DataLoader(val_graphs, batch_size=32, shuffle=False)\n",
+        "test_loader = DataLoader(test_graphs, batch_size=32, shuffle=False)"
       ]
     }
   ],
